config/k8s/Xperimantal/keycloak/oauth2-proxy-keycloak-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
        - args:
            - --provider=keycloak-oidc
            - --client-id=skyclient
#            - --client-secret=
            - --redirect-url=https://skycloud.luksarna.com
            - --oidc-issuer-url=http://34.116.235.60/realms/skyrealm
            #            - --allowed-role=<realm role name> // Optional, required realm role
            #            - --allowed-role=<client id>:<client role name> // Optional, required client role

            #            for supporting PKCE methods from keycloak
            - --code-challenge-method="S256"
            #            for error with x509 certificates
            - --ssl-insecure-skip-verify=true
            - --ssl-upstream-insecure-skip-verify=true

            #            additional required parameters
            - --email-domain=*
            - --cookie-secure=false
            - --cookie-secret=SEEECRETXXXXXXXX
            - --set-xauthrequest=true
            - --pass-authorization-header=true
            - --set-authorization-header=true
            - --pass-access-token=true
            - --pass_host_header=true
#            - --login-url=http://34.116.235.60/realms/skyrealm/protocol/openid-connect/auth
#            - --redeem-url=http://34.116.235.60/realms/skyrealm/protocol/openid-connect/token
#            - --profile-url=http://34.116.235.60/realms/skyrealm/protocol/openid-connect/userinfo
#            - --validate-url=http://34.116.235.60/realms/skyrealm/protocol/openid-connect/userinfo

          image: quay.io/oauth2-proxy/oauth2-proxy:latest
          imagePullPolicy: Always
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              protocol: TCP
