config/k8s/Xperimantal/keycloak/keycloak-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - keycloak.skycloud.luksarna.com
  rules:
    - host: keycloak.skycloud.luksarna.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
